--- a/conf/settings.example.yaml
+++ b/conf/settings.example.yaml
@@ -1,15 +1,31 @@
-auth_service: None # Options are None or ptc or google
-username: 'MyUsername' # Your username
-password: 'MySuperStrongPassword' # Your password
-location: 'Boulder, CO' # Any location Google Maps can understand
-step_limit: 5 # Steps to take
-display_pokestop: False # True or False
-display_gym: False # True or False
-ignore: None # [ 13, 16 ] # Pokenon to ignore
-only: None # [ 150, 151 ] # The only pokemon that should be displayed
-locale: 'en' # The language to use
-auto_refresh: None # integer value in seconds example: 30
-china: False  # True or False
-debug: False # Enable debugging True or False
-host: '127.0.0.1' # The host address the web server should bind to
-port: 5000 # The port that the web server should bind to
+# Authentication
+auth_service: None  # one of: None, ptc, google
+username: 'MyUsername' 
+password: 'MySuperStrongPassword'
+
+# Location that google maps understands
+location: 'Boulder, CO' 
+# Steps to take, typically 2-5
+step_limit: 5 
+
+# What to plot on the map
+display_pokestop: False
+display_gym: False
+ # Pokenon to ignore
+ignore: None # [ 13, 16 ]
+# The only pokemon that should be displayed
+only: None # [ 150, 151 ] 
+
+# UI
+locale: 'en' 
+# Autofresh, None or integer value in seconds
+auto_refresh: None 
+# Debug-level logging
+debug: False 
+
+# Use China transformer
+china: False  
+
+# Web server host and port, defaults to localhost:3000
+host: '127.0.0.1' 
+port: 5000 
